fix: squashed pictures

--- a/styles/components/profile-avatar.scss
+++ b/styles/components/profile-avatar.scss
@@ -9,5 +9,6 @@
   height: 106px;
   border: 2px solid var(--white);
   box-shadow: 0px 1px 20px var(--brightness) var(--white),
-    inset 0px 75px 50px rgba(0, 0, 0, 0.25);
+  inset 0px 75px 50px rgba(0, 0, 0, 0.25);
+  object-fit: contain
 }
